<resources>
    <string name="app_name">Lab1</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lbl_name">"Name: "</string>
    <string name="lbl_address">"Address: "</string>
    <string name="address1">911 Hollywood Blvd</string>
    <string name="name1">John Doe</string>

    <!--  relative  -->
    <string name="sign_in">Sign in</string>
    <string name="username">Username: </string>
    <string name="password">Password: </string>
    <string name="signup">Sign up</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in_via_facebook">Sign In via Facebook</string>
    <string name="email_hint">name@gmail.com</string>
    <string name="password_hint">******</string>
</resources>